--- a/src/App.css
+++ b/src/App.css
@@ -87,24 +87,9 @@ body {
 }
 
 .container {
-	--max-width: 1250px;
-	--padding: 0rem;
-	--dynamic-width: 93%;
-
 	width: min(var(--max-width), var(--dynamic-width));
 	padding-inline: var(--padding);
 	margin-inline: auto;
-}
-
-@media screen and (min-width: 48em) {
-	.container {
-		--padding: 1.5rem;
-	}
-}
-@media screen and (min-width: 54em) {
-	.container {
-		--padding: 3rem;
-	}
 }
 
 /* setting up buttons */
@@ -157,7 +142,6 @@ body {
 	background-color: hsl(var(--color-primary-600));
 	color: hsl(var(--color-neutral-400));
 	font-weight: 700;
-	box-shadow: 0px 20px 24px -12px hsla(26, 100%, 55%, 0.5);
 }
 
 .btn--icon-text-primary:is(:hover, :focus-visible) {
@@ -166,6 +150,17 @@ body {
 
 .btn--icon-text-primary:active {
 	background-color: hsl(var(--color-primary-400));
+}
+
+.btn--icon-half {
+	--dimen: 4.5rem;
+	width: var(--dimen);
+	height: var(--dimen);
+}
+
+.btn--icon-half svg {
+	width: 75%;
+	height: 75%;
 }
 
 .btn--block {
