--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import url(./components/header/header.css);
 @import url(./components/navbar/navbar.css);
 @import url(./components/product/product.css);
+@import url(./components/product-carasoul/product-carasoul.css);
 
 :root {
 	/* I doesn't specify the function because it is possible I will add opacity in colors so it will be easy to add opacity */
@@ -44,11 +45,23 @@
 	--fw-medium: 500;
 	--fw-semi-bold: 600;
 	--fw-bold: 700;
+
+	/* properties for width bound container */
+	--max-width: 1250px;
+	--padding: 0rem;
+	--dynamic-width: 93%;
+}
+
+@media screen and (min-width: 48em) {
+	:root {
+		--padding: 1.5rem;
+	}
 }
 
 @media screen and (min-width: 54em) {
 	:root {
 		--fs-body: var(--fs-600);
+		--padding: 3rem;
 	}
 }
 
